Stylesheet/emote/tag updates 2012-12-07

--- a/source-css/futemotes.css
+++ b/source-css/futemotes.css
@@ -339,3 +339,12 @@ a[href|="/hom3rbutt"] {
     height: 250px;
     width: 287px;
 }
+
+a[href|="/futalick"] {
+    display: block;
+    clear: none;
+    float: left;
+    background-image:url(%%futalick%%);
+    height: 250px;
+    width: 246px;
+}
