--- a/source-css/mylittlebannertest.css
+++ b/source-css/mylittlebannertest.css
@@ -355,6 +355,14 @@ a.author[href$="OneOfTheseDaysLuna"]:before {
     background-image: url(%%jizz%%)
     }
 
+ a[href|="/rainbowponysemen"],a[href|="/20%jizzer"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 160px;
+    height: 97px;
+    background-image: url(%%rainbowponysemen%%)
+    }
 
  a[href|="/llladies"] {
     display: block;
