--- a/source-css/mylittleserver.css
+++ b/source-css/mylittleserver.css
@@ -218,6 +218,30 @@ a[href|="/mlse3"], a[href|="/onedoesnotsimply"] {
     height: 198px;
     background-image: url(%%onedoesnotsimply%%)
     }
+a[href|="/mlse4"], a[href|="/trixiepout"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 260px;
+    height: 199px;
+    background-image: url(%%trixiepout%%)
+    }
+a[href|="/mlsf1"], a[href|="/ironwillthumbsup"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 300px;
+    height: 204px;
+    background-image: url(%%ironwillthumbsup%%)
+    }
+a[href|="/mlsf2"], a[href|="/sgwsi"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 147px;
+    height: 129px;
+    background-image: url(%%sgwsi%%)
+    }
 END-PONYSCRIPT-IGNORE{color:red;}
 
 /*Changing Names*/
