--- a/source-css/thebestpony.css
+++ b/source-css/thebestpony.css
@@ -1143,7 +1143,7 @@ a[href|="/rbpd29"], a[href|="/ryuno"] {
     background-position: -350px -630px
     }
 /*BPD2 emutes*/
-a[href|="/bpd30"], a[href|="/rbpd30"], a[href|="/scootsassin"], a[href|="/rscootsassin"], a[href|="/bpd31"], a[href|="/rbpd31"], a[href|="/shutterfly"], a[href|="/rshutterfly"], a[href|="/bpd32"], a[href|="/rbpd32"], a[href|="/rarpleased"], a[href|="/rrarpleased"], a[href|="/bpd33"], a[href|="/rbpd33"], a[href|="/fsfear"], a[href|="/rfsfear"],  a[href|="/bpd34"], a[href|="/rbpd34"], a[href|="/sbshake"], a[href|="/rsbshake"], a[href|="/bpd35"], a[href|="/rbpd35"], a[href|="/babssmirk"], a[href|="/rbabssmirk"], a[href|="/bpd36"], a[href|="/rbpd36"], a[href|="/trixiestahp"], a[href|="/rtrixiestahp"] {
+a[href|="/bpd30"], a[href|="/rbpd30"], a[href|="/scootsassin"], a[href|="/rscootsassin"], a[href|="/bpd31"], a[href|="/rbpd31"], a[href|="/shutterfly"], a[href|="/rshutterfly"], a[href|="/bpd32"], a[href|="/rbpd32"], a[href|="/rarpleased"], a[href|="/rrarpleased"], a[href|="/bpd33"], a[href|="/rbpd33"], a[href|="/fsfear"], a[href|="/rfsfear"],  a[href|="/bpd34"], a[href|="/rbpd34"], a[href|="/sbshake"], a[href|="/rsbshake"], a[href|="/bpd35"], a[href|="/rbpd35"], a[href|="/babssmirk"], a[href|="/rbabssmirk"], a[href|="/bpd36"], a[href|="/rbpd36"], a[href|="/trixieomg"], a[href|="/rtrixieomg"] {
     display: block; 
     clear: none;
     float: left;
@@ -1187,10 +1187,10 @@ a[href|="/bpd35"], a[href|="/babssmirk"] {
 a[href|="/rbpd35"], a[href|="/rbabssmirk"] {
     background-position: -210px -350px
     }
-a[href|="/bpd36"], a[href|="/trixiestahp"] {
+a[href|="/bpd36"], a[href|="/trixieomg"] {
     background-position: -0px -420px
     }
-a[href|="/rbpd36"], a[href|="/rtrixiestahp"] {
+a[href|="/rbpd36"], a[href|="/rtrixieomg"] {
     background-position: -210px -420px
     }
 /*BPE emutes*/
