--- a/source-css/berrytubelounge.css
+++ b/source-css/berrytubelounge.css
@@ -59,7 +59,8 @@ a.author[href$="rautenkranzmt"],
 a.author[href$="CrashTestDumbass"],
 a.author[href$="div_"],
 a.author[href$="di_zz"],
-a.author[href$="arborcide"]
+a.author[href$="arborcide"],
+a.author[href$="motbob"]
 { 
 font-size:0!important; 
 overflow:hidden; 
@@ -77,7 +78,8 @@ a.author[href$="rautenkranzmt"]:before,
 a.author[href$="CrashTestDumbass"]:before,
 a.author[href$="div_"]:before,
 a.author[href$="di_zz"]:before,
-a.author[href$="arborcide"]:before
+a.author[href$="arborcide"]:before,
+a.author[href$="motbob"]:before
 {
 font-size:10px!important; 
 visibility:visible!important;
@@ -94,6 +96,7 @@ a.author[href$="rautenkranzmt"]:before { content:"sehro" }
 a.author[href$="CrashTestDumbass"]:before { content:"Trahsi" }
 a.author[href$="div_"]:before { content:"wut" }
 a.author[href$="arborcide"]:before { content:"Sly_Clopper" }
+a.author[href$="motbob"]:before { content:"Littlecolt" }
 
 /*Spoiler tag within comments. Your comment should be: "[This is a spoiler sentence.](/spoiler)" */  
 a[href$="/spoiler"] {  
@@ -168,6 +171,42 @@ height: 140px;
 background-image: url(%%btlemotetable2%%) !important
 }
 
+a[href|="/bptuba"], a[href|="/miggyb"], a[href|="/omnomtom"], a[href|="/jeb"] {
+display:block;
+clear: none;
+float: left;
+width: 70px;
+height: 70px;
+background-image: url(%%btlemotetable3%%) !important
+}
+
+a[href|="/jebkerman"], a[href|="/daftworth"], a[href|="/derpshake"] {
+display:block;
+clear: none;
+float: left;
+width: 140px;
+height: 140px;
+background-image: url(%%btlemotetable3%%) !important
+}
+
+a[href|="/wubjection"] {
+display:block;
+clear: none;
+float: left;
+width: 140px;
+height: 70px;
+background-image: url(%%btlemotetable3%%) !important
+}
+
+a[href|="/crystaldiva"] {
+display:block;
+clear: none;
+float: left;
+width: 210px;
+height: 140px;
+background-image: url(%%btlemotetable3%%) !important
+}
+
 /* Temporarily Removed until a blank background in progress by Kallado is finished
 a[href|="/cmcbop"]{
 display:block;
@@ -223,20 +262,29 @@ height: 70px;
 background-image: url(%%poutypie%%) !important
 }
 
+a[href|="/vsheadbang"]{
+display:block;
+clear: none;
+float: left;
+width: 92px;
+height: 70px;
+background-image: url(%%vsheadbang%%) !important
+}
+
 /* Sheet offsets */
 a[href|="/btl00"], a[href|="/halp"] {
 background-position: -0px -0px
 }
 
-a[href|="/btl10"], a[href|="/onekeg"], a[href|="/blt10"], a[href|="/ppmoonwalk"] {
+a[href|="/btl10"], a[href|="/onekeg"], a[href|="/blt10"], a[href|="/ppmoonwalk"], a[href|="/miggyb"] {
 background-position: -70px -0px
 }
 
-a[href|="/blt20"], a[href|="/ppbloat"]{
+a[href|="/blt20"], a[href|="/ppbloat"], a[href|="/jebkerman"]{
 background-position: -140px -0px
 }
 
-a[href|="/btl01"], a[href|="/scootafresh"], a[href|="/blt01"], a[href|="/pprumgone"] {
+a[href|="/btl01"], a[href|="/scootafresh"], a[href|="/blt01"], a[href|="/pprumgone"], a[href|="/wubjection"] {
 background-position: -0px -70px
 }
 
@@ -244,11 +292,11 @@ a[href|="/btl11"], a[href|="/spikedapper"], a[href|="/blt11"], a[href|="/rawrity
 background-position: -70px -70px
 }
 
-a[href|="/btl02"], a[href|="/beepbeep"], a[href|="/blt02"], a[href|="/ppfingers"] {
+a[href|="/btl02"], a[href|="/beepbeep"], a[href|="/blt02"], a[href|="/ppfingers"], a[href|="/omnomtom"] {
 background-position: -0px -140px
 }
 
-a[href|="/btl12"], a[href|="/vinyldance"] {
+a[href|="/btl12"], a[href|="/vinyldance"], a[href|="/crystaldiva"] {
 background-position: -70px -140px
 }
 
@@ -256,7 +304,7 @@ a[href|="/blt22"], a[href|="/vodka"], a[href|="/wodka"], a[href|="/WODKA"], a[hr
 background-position: -140px -140px
 }
 
-a[href|="/btl03"], a[href|="/octysmile"] {
+a[href|="/btl03"], a[href|="/octysmile"], a[href|="/jeb"] {
 background-position: -0px -210px
 }
 
@@ -264,10 +312,10 @@ a[href|="/btl13"], a[href|="/octygrin"] {
 background-position: -70px -210px
 }
 
-a[href|="/btl04"], a[href|="/octav3drag"], a[href|="/blt04"], a[href|="/berryapproved"], a[href|="/bpapproves"] {
+a[href|="/btl04"], a[href|="/octav3drag"], a[href|="/blt04"], a[href|="/berryapproved"], a[href|="/bpapproves"], a[href|="/daftworth"] {
 background-position: -0px -280px
 }
 
-a[href|="/blt24"], a[href|="/rdchairfort"]{
+a[href|="/blt24"], a[href|="/rdchairfort"], a[href|="/derpshake"]{
 background-position: -140px -280px
 }
