--- a/source-css/flutterlounge.css
+++ b/source-css/flutterlounge.css
@@ -110,6 +110,14 @@ a[href|="/shyshake"] {
     height: 300px;
     background-image: url(%%shyshake%%)
     }
+a[href|="/flutterbutts"], a[href|="/shysintheair"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 402px;
+    height: 421px;
+    background-image: url(%%shysintheair%%)
+    }
 
 
 /* Space thingy */
