--- a/source-css/mylittleandysonic1.css
+++ b/source-css/mylittleandysonic1.css
@@ -452,13 +452,14 @@ a[href|='/surbarf'], a[href|='/sursmelledyourcloset'] {width:273px; height:152px
 a[href|='/trixieplot'] {width:152px; height:116px; background-position: -0px -1698px}
 
 
-a[href|='/twichangeling'] {
+a[href|='/ruined'], a[href|='/twichangeling'] {
     display: block;
     clear: none;
     float: left;
     background-image: url(%%table12%%)
     }
 
+a[href|='/ruined'] {width:308px; height:152px; background-position: -0px -202px}
 a[href|='/twichangeling'] {width:150px; height:202px; background-position: -0px -0px}
 
 
@@ -1012,7 +1013,7 @@ a.author[href$=Catharsis25]:before { content:"Catharsis" }
 a.author[href$=tehz]:before,a.author[href$=tailcalled]:before { content:"Tail Call" }
 a.author[href$=Ruuch]:before { content:"Escort Sluthooves" }
 a.author[href$=herabek]:before {content:"Herb"}
-a.author[href$=OneOfTheseDaysLuna]:before { content:"OneOfThoseOneOfTheseDaysLuna" }
+a.author[href$=OneOfTheseDaysLuna]:before { content:"OneOfTheseFutemotes" }
 a.author[href$=Zovistograt]:before { content:'[](/ww20 “Needy Bitch”)' }
 a.author[href$=ZZW30]:before { content:"CaptChuckles" }
 
@@ -1139,7 +1140,7 @@ a.author[href$=tehz]:after,a.author[href$=tailcalled]:after { content:" (925) - 
 a.author[href$=iiRockpuppy]:after { content:" - ''ii'd tap dat ass''" }
 a.author[href$=theworstnoveltyacct]:after { content:" call for a good time" }
 a.author[href$=socially_broken]:after  { content:" This guy knows the best vore art." }
-a.author[href$=OneOfTheseDaysLuna]:after { content:" really knows how to work the dude." }
+a.author[href$=OneOfTheseDaysLuna]:after { content:" [](/fut8)" }
 a.author[href$=hermano23]:after { content:" the entertainer" }
 a.author[href$=herabek]:after { content:" TOKIN' DAT DANK-ASS SHIT" }
 a.author[href$="10z20Luka"]:after { content:" (Wears a flaming kilt made from the blood and skin of those that have been unfortunate enough to meet him in combat. Loves horse cock, but only if it is all one color. AKA The Destroyer of Styles. Can destroy even the smallest thread with his giant after-text title. He truly shall be feared. He also employs fun-loving, cheerful racism for comedic effect (like the racist prick he is). Also, he is a douchy bag douche who douch bag with bag douche. Andy's room-mate and lover)";
