--- a/source-css/seriouslyluna.css
+++ b/source-css/seriouslyluna.css
@@ -42,7 +42,10 @@ SeriouslyConky:
 SeriouslyMaku: 
         > Added ohgodsheet and an emote
         > Changed Subscriber's stuff
-
+        > Added new emotes on 250Sheet1a
+        > Added new emotes to EmoteSheet4b
+        >MORE EMOTES
+        > 'Nother one.
 */
 
 
@@ -645,7 +648,7 @@ a[href|="/seriouslyscaredhug"] {
     width: 92px;
     background-position: -530px -0px
 }
-a[href|="/seriouslyastronaut"], a[href|="/lunaloosemane"], a[href|="/lunajump"], a[href|="/lunafacehoof"], a[href|="/lunawetmane"], a[href|="/lunaball"], a[href|="/shipwithfloutsy"] {
+a[href|="/seriouslyastronaut"], a[href|="/lunaloosemane"], a[href|="/lunajump"], a[href|="/lunafacehoof"], a[href|="/lunawetmane"], a[href|="/lunaball"], a[href|="/shipwithfloutsy"], a[href|="/scootahug"], a[href|="/scootadashhug"], a[href|="/pwettyprincess"], a[href|="/pwettypwincess"], a[href|="/seriouslymerry"], a[href|="/seriouslywat"] {
     display: block;
     clear: none;
     float: left;
@@ -680,7 +683,23 @@ a[href|="/shipwithfloutsy"] {
     width: 119px;
     background-position: -752px -0px
 }
-a[href|="/fuckfloutsy"], a[href|="/seriouslyevilflitter"], a[href|="/notamusedfloutchaser"], a[href|="/lovefloutsy"] {
+a[href|="/scootahug"], a[href|="/scootadashhug"] {
+    width: 113px;
+    background-position: -871px -0px
+}
+a[href|="/pwettyprincess"], a[href|="/pwettypwincess"] {
+    width: 126px;
+    background-position: -984px -0px
+}
+a[href|="/seriouslymerry"] {
+    width: 144px;
+    background-position: -1111px -0px
+}
+a[href|="/seriouslywat"] {
+    width: 197px;
+    background-position: -1255px -0px
+}
+a[href|="/fuckfloutsy"], a[href|="/seriouslyevilflitter"], a[href|="/notamusedfloutchaser"], a[href|="/lovefloutsy"], a[href|="/seriouslymadluna"], a[href|="/raisingthemoon"], a[href|="/seriouslyexcited"], a[href|="/surprisedluna"] {
     display: block;
     clear: none;
     float: left;
@@ -702,6 +721,22 @@ a[href|="/notamusedfloutchaser"] {
 a[href|="/lovefloutsy"] {
     width: 172px;
     background-position: -516px -0px
+}
+a[href|="/seriouslymadluna"] {
+    width: 256px;
+    background-position: -688px -0px
+}
+a[href|="/raisingthemoon"] {
+    width: 168px;
+    background-position: -944px -0px
+}
+a[href|="/seriouslyexcited"] {
+    width: 459px;
+    background-position: -1112px -0px
+}
+a[href|="/surprisedluna"] {
+    width: 239px;
+    background-position: -1571px -0px
 }
 a[href|="/seriouslunadance"] {
     display: block;
